WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308684
Bounds checking does not work in Memory64 in BBQ
https://bugs.webkit.org/show_bug.cgi?id=308684
Summary
Bounds checking does not work in Memory64 in BBQ
ccarley2
Reported
2026-02-25 16:53:13 PST
BBQ tier can use signaling while using Memory64, which will not work
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-25 16:53:20 PST
<
rdar://problem/171218345
>
ccarley2
Comment 2
2026-02-25 16:57:28 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59465
EWS
Comment 3
2026-02-27 18:51:55 PST
Committed
308379@main
(653249798501): <
https://commits.webkit.org/308379@main
> Reviewed commits have been landed. Closing PR #59465 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug