Source/JavaScriptCore/wasm/WasmMemoryInformation.cpp
@@ -38,7 +38,7 @@ MemoryInformation::MemoryInformation(PageCount initial, PageCount maximum, bool 
     , m_maximum(maximum)
     , m_isShared(isShared)
     , m_isImport(isImport)
-    , m_isMemory64(isMemory64)
+    , m_addressType(isMemory64)
 {
     RELEASE_ASSERT(!!m_initial);
     RELEASE_ASSERT(!m_maximum || m_maximum >= m_initial);
